Bug 108835 - Writer freezes when clicking OK / creating new Autocorrect entry
Summary: Writer freezes when clicking OK / creating new Autocorrect entry
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Linguistic (show other bugs)
Version:
(earliest affected)
6.0.0.0.alpha0+
Hardware: x86-64 (AMD64) All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:6.0.0
Keywords: bibisected, bisected, regression
: 109156 (view as bug list)
Depends on:
Blocks: AutoCorrect-Complete FastParser-regressions
  Show dependency treegraph
 
Reported: 2017-06-28 12:43 UTC by Cor Nouws
Modified: 2026-07-06 10:30 UTC (History)
6 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cor Nouws 2017-06-28 12:43:24 UTC
- start Writer
- add text "demo autcorrect" or similar and select text, 
- Tools > Autocorrect > Autocorrect Options, firs tab
- enter text DAT in box Replace; box With should hold selected text
- click New
- now OK > Freeze

kill & recover LibreOffice
check that autocorrect entry is not saved.

Found in Version: 6.0.0.0.alpha0+
Build ID: e0f67add2ec56706ce06a03572535266f21c0303
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-06-27_23:55:07
Locale: nl-NL (nl_NL.UTF-8); Calc: group

(but also saw it in a version from June 18)

(maybe related: saving a specific document, that I cannot share, takes looong..)
Comment 1 tommy27 2017-06-28 12:58:20 UTC
no repro under Win7x64

6.0.0.0.alpha0+
Build ID: 458fadbaf7b7f816a01304b48c0938407e65f060
CPU threads: 8; OS: Windows 6.1; UI render: GL; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-06-13_23:06:37
Locale: it-IT (it_IT); Calc: group
Comment 2 Telesto 2017-06-28 18:38:56 UTC
Repro with:
Version: 6.0.0.0.alpha0+
Build ID: 9f3814af7264ce90685a82cbf4eb015a38f22bf7
CPU threads: 4; OS: Windows 6.19; UI render: default; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-06-28_00:47:42
Locale: nl-NL (nl_NL); Calc: CL
Comment 3 Cor Nouws 2017-06-29 11:49:32 UTC
thanks for testing and confirming, tommy & telesto
Comment 4 Telesto 2017-06-29 12:23:57 UTC
No repro with:
Versie: 5.4.0.1 
Build ID: 962a9c4e2f56d1dbdd354b1becda28edd471f4f2
CPU-threads: 4; Besturingssysteem:Windows 6.2; UI-render: standaard; 
Locale: nl-NL (nl_NL); Calc: CL
Comment 5 Xisco Faulí 2017-07-12 09:23:51 UTC
Regression introduced by:

author	Mohammed Abdul Azeem <azeemmysore@gmail.com>	2017-06-11 11:50:15 (GMT)
committer	Michael Meeks <michael.meeks@collabora.com>	2017-06-12 11:07:17 (GMT)
commit 7260bb7160fe58ac63b6b5dd9a322805b1eacab4 (patch)
tree 2d84736890bc7dd84d21419435f4a613de2243c0
parent febbad7263ea25b76f4e53d2f136693a52207a1c (diff)
Setting Buffered(threaded)Stream as default:

Bisected with bibisect-linux64-6.0

Adding Cc: to Mohammed Abdul Azeem
Comment 6 Michael Meeks 2017-07-12 09:38:02 UTC
Nice catch =) Mohammed - you mentioned you'd found another threading issue in the code - could this be related ? =)
Comment 7 Xisco Faulí 2017-07-17 12:46:47 UTC
*** Bug 109156 has been marked as a duplicate of this bug. ***
Comment 8 tommy27 2017-07-17 13:19:24 UTC
@Cor
please try steps from Bug 109156

I noticed a similar issue which is triggered even just pressing "OK" without adding or changing any autocorrect entry.

is your bug triggered only when you add an entry or it happens just clicking the "OK" button?
Comment 9 Cor Nouws 2017-07-19 10:54:07 UTC
(In reply to tommy27 from comment #8)

> is your bug triggered only when you add an entry or it happens just clicking
> the "OK" button?

I never click OK before doing anything useful ;)
But indeed, you're right with that suggestion !
Comment 10 Michael Meeks 2017-07-19 11:49:57 UTC
Expected fixed - although we could do rather better here in the package/ backend in future I think: copying compressed streams over instead of de-compressing and re-compressing (synchronously).
Comment 11 Commit Notification 2017-07-19 11:50:26 UTC
Mohammed Abdul Azeem committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=def6f7f749dd0a175427e51d8620b1406084d553

tdf#108835 Fixed writer crash on adding Autocorrect Entry:

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 tommy27 2017-07-19 14:16:15 UTC
(In reply to Cor Nouws from comment #9)
> (In reply to tommy27 from comment #8)
> 
> > is your bug triggered only when you add an entry or it happens just clicking
> > the "OK" button?
> 
> I never click OK before doing anything useful ;)
> But indeed, you're right with that suggestion !

so did it hange as well?
Comment 13 tommy27 2017-07-20 17:14:21 UTC
nevermind...

just verified it's fixed in Version: 6.0.0.0.alpha0+
Build ID: d7a2fd3e8262b8897ad06f01f25f46330e050e0c
CPU threads: 8; OS: Windows 6.1; UI render: GL; 
TinderBox: Win-x86@42, Branch:master, Time: 2017-07-20_08:26:15
Locale: it-IT (it_IT); Calc: group

@Mohammed Abdul Azeem
is the 5.4.x branch still affected by the bug?
are you going to push the patch to that branch too?
Comment 14 Michael Meeks 2017-07-20 17:53:30 UTC
Nope - it shouldn't the more aggressive ZIP threading stuff is just on master =)
Comment 15 Watodis Smit 2022-02-07 07:25:53 UTC Comment hidden (spam)